# maeq

./: CMakeLists.txt  README.md
cmake/: cpm.cmake
plugin/: CMakeLists.txt
plugin/include/: PluginEditor.h  PluginProcessor.h
plugin/source/: PluginEditor.cpp  PluginProcessor.cpp
src/: ChainSettings.cpp  ChainSettings.h  Clipper.cpp  Clipper.h  EQValues.h  Equalizer.cpp  Equalizer.h  Filter.cpp  Filter.h  Frequencies.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
